--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ target_include_directories(stb_image SYSTEM INTERFACE third_party/stb_image)
 
 add_executable(phaos
   src/main.cpp
+  src/film.cpp
 )
 
 target_include_directories(phaos PRIVATE src)
 target_link_libraries(phaos stb_image)
 target_compile_options(phaos PRIVATE -Weverything -Werror -std=c++20
     -Wno-c++98-compat
+    -Wno-sign-conversion
 )
